--- a/client/src/components/Dialog/BekreftelseDialog.css
+++ b/client/src/components/Dialog/BekreftelseDialog.css
@@ -8,6 +8,6 @@
     justify-content: space-between;
 }
 
-bekreftelse-dialog-overskrift {
+.bekreftelse-dialog-overskrift {
     margin-bottom: 2rem;
 }
