--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   background-color: #f1f1f1;
 }
+
+html, body, #root {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
