Bruk description list til statistikkboksar
Statistikkboksane listar opp tal for ulike tema. Ved å bruke descripton list (dl) kan vi få fram denne relasjonen mellom elementa i html.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,8 @@ html, body, #root {
 p {
   max-width: 60em;
 }
+
+/* Reset default margin for description elements in description lists. */
+dd {
+  margin-left: 0;
+}
