Gjev button-secondary frå designsystemet kvit bakgrunn ved å overskrive stylinga til designsystemet
Dette gjer at vi sikrar betre kontrast der vi har brukt button-secondary saman med bg-subtle (lysegrå), til dømes mellom statusfeltet til ein sak og "Forrige status"-knappen inni der.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,3 +21,11 @@ p {
 dd {
   margin-left: 0;
 }
+
+/*
+ * Gjev secondary-knapp frå designsystemet kvit bakgrunn
+ * slik at vi får betre kontrast når den vert brukt på saman med "background-subtle"
+ */
+.navds-button.navds-button--secondary {
+  background: var(--a-bg-default) /* "white" i designsystemet 2023-11-29 */
+}
