--- a/client/src/Pages/Virksomhet/Kartlegging/publiserSpørreundersøkelse.module.scss
+++ b/client/src/Pages/Virksomhet/Kartlegging/publiserSpørreundersøkelse.module.scss
@@ -1,3 +1,16 @@
 .publiserknapp {
 	min-width: 130px;
 }
+
+.spinner {
+	animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
