--- a/client/src/styling/_containere.scss
+++ b/client/src/styling/_containere.scss
@@ -1,24 +1,24 @@
-.hvisBoksMedSkygge {
+@mixin hvitBoksMedSkygge {
     background-color: var(--a-white);
     box-shadow: var(--a-shadow-small);
     border-radius: var(--a-border-radius-medium);
 }
 
-.tabInnholdStyling {
+@mixin tabInnholdStyling {
     padding: 1.5rem;
     background: var(--a-white);
     border-radius: var(--a-border-radius-medium);
     box-shadow: var(--a-shadow-small);
 }
 
-.max75remBreddeOgSentrert {
+@mixin max75remBreddeOgSentrert {
     width: clamp(0px, 100%, 75rem);
     margin-left: auto;
     margin-right: auto;
 }
 
-.sideContainer {
+@mixin sideContainer {
     padding: 1.5rem 0;
 
-    @extend .max75remBreddeOgSentrert;
+    @include max75remBreddeOgSentrert;
 }
