Vis "åpen frem til" for spørreundersøkelser
Co-authored-by: Christian Klem <christian.klem@nav.no>

--- a/client/src/Pages/Virksomhet/Kartlegging/behovsvurderingCardHeaderInnhold.module.scss
+++ b/client/src/Pages/Virksomhet/Kartlegging/behovsvurderingCardHeaderInnhold.module.scss
@@ -71,6 +71,16 @@
     margin-left: 1rem;
 }
 
+.gyldigTilDato {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    width: 19rem;
+    text-align: left;
+    margin-left: 1rem;
+    font-size: 1rem;
+}
+
 .behovsvurderingStatusWrapper {
     min-width: 5rem;
 }
