Viser tittel på kartleggingsrader hvor vi skjuler knapper for lesebruker.

--- a/client/src/Pages/Virksomhet/Kartlegging/behovsvurderingCardHeaderInnhold.module.scss
+++ b/client/src/Pages/Virksomhet/Kartlegging/behovsvurderingCardHeaderInnhold.module.scss
@@ -42,6 +42,10 @@
         var(--__ac-expansioncard-border-color);
     justify-content: space-between;
     flex-wrap: wrap;
+
+    .tittelUtenTopMargin {
+        margin-top: 0;
+    }
 }
 
 .headerRightContent {
