--- a/client/src/Pages/Virksomhet/Samarbeid/Evaluering/evaluering.module.scss
+++ b/client/src/Pages/Virksomhet/Samarbeid/Evaluering/evaluering.module.scss
@@ -64,6 +64,10 @@
     .evalueringHeaderRightContent {
         @include headerRightContentShared;
     }
+
+    .tittelUtenTopMargin {
+        margin-top: 0;
+    }
 }
 
 .spinningIcon {
