La til tittel på spørreundersøkelseskort med for få svar. Fikset lik størrelse på "ikke gjennomført innen..." og "for få besvaralser...".

--- a/client/src/Pages/Virksomhet/Kartlegging/behovsvurderingCardHeaderInnhold.module.scss
+++ b/client/src/Pages/Virksomhet/Kartlegging/behovsvurderingCardHeaderInnhold.module.scss
@@ -46,6 +46,14 @@
     .tittelUtenTopMargin {
         margin-top: 0;
     }
+
+    .headerLeftContent {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+        align-self: center;
+    }
 }
 
 .headerRightContent {
