Lagt til all funksjonalitet (tror jeg) i ny layout. Trenger fremdeles styling og tester.

--- a/client/src/Pages/VirksomhetNy/Samarbeidsvelger/samarbeidsvelger.module.scss
+++ b/client/src/Pages/VirksomhetNy/Samarbeidsvelger/samarbeidsvelger.module.scss
@@ -11,6 +11,7 @@
 	flex-direction: column;
 	align-items: stretch;
 	justify-content: flex-start;
+	background-color: var(--a-surface-default);
 
 	.radCommon {
 		@include radStyling;
