--- a/client/src/Pages/VirksomhetNy/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
+++ b/client/src/Pages/VirksomhetNy/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
@@ -30,11 +30,11 @@
 	}
 }
 
-.virksomhetOgSamarbeidsHeader { //Container
+.virksomhetOgSamarbeidsHeader {
     display: flex;
     flex-direction: column;
-    margin-bottom: 2rem;
     gap: 0.75rem;
+	background-color: var(--a-surface-default);
 
 	.salesforceLenke {
 		font-size: 1.125rem;
