--- a/client/src/Pages/Virksomhet/virksomhetsvisning.module.scss
+++ b/client/src/Pages/Virksomhet/virksomhetsvisning.module.scss
@@ -1,24 +1,37 @@
 @use "../../styling/contentSpacing.scss" as spacing;
 
-.virksomhetsvisning {
-    padding-top: spacing.$contentSpacingMobileY;
+.virksomhetsTabs {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 
-    background-color: var(--a-white);
-    @include spacing.strekkBakgrunnenHeltUtTilKantenAvSida;
-
-    & {
-        --a-font-size-heading-xlarge: 1.75rem;
-    }
-
-    .panel {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
-
-        background-color: var(--a-gray-100);
-        @include spacing.strekkBakgrunnenHeltUtTilKantenAvSida;
-
-        .nyKodeBanner {
-            margin-bottom: 1rem;
+    .virksomhetsvisning {
+        flex-grow: 1;
+    
+        background-color: var(--a-white);
+    
+        .samarbeidsvelgerSidebar {
+            width: 16rem;
+            max-width: 16rem;
+            flex-shrink: 0;
+        }
+    
+        .innhold {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+            justify-content: flex-start;
+            gap: 2rem;
+            background-color: var(--a-gray-100);
+    
+            .blåTing {
+                background-color: var(--a-blue-100);
+                padding: 1rem;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
         }
     }
 }
