--- a/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
+++ b/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
@@ -35,6 +35,7 @@
     flex-direction: column;
     gap: 0.75rem;
 	background-color: var(--a-surface-default);
+	padding: 2rem;
 
 	.salesforceLenke {
 		font-size: 1.125rem;
