La til noe box shadow (ikke final version) på virksomhetsheader.

--- a/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
+++ b/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
@@ -36,6 +36,8 @@
     gap: 0.75rem;
 	background-color: var(--a-surface-default);
 	padding: 2rem;
+	box-shadow: var(--a-shadow-small);
+	z-index: 1;
 
 	.salesforceLenke {
 		font-size: 1.125rem;
