Oppdaterte styling på sykefraværsstatistikk/historikk-knapper.

--- a/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
+++ b/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
@@ -1,59 +1,65 @@
 .historikkContainer {
-	padding-left: 0.5rem;
-	padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 
-	&.begrensHøyde {
-		max-height: 15rem;
-		overflow-y: auto;
-	}
+    &.begrensHøyde {
+        max-height: 15rem;
+        overflow-y: auto;
+    }
 }
 
 .dropdownHeader {
-	padding: 0.5rem 0.5rem 1rem;
+    padding: 0.5rem 0.5rem 1rem;
 }
 
 .saksgangDropdownToggle {
-	--tekstfarge: var(--a-text-default);
-	--farge: var(--a-color-subtle);
-	--hoverfarge: var(--farge);
+    --tekstfarge: var(--a-text-default);
+    --farge: var(--a-color-subtle);
+    --hoverfarge: var(--farge);
 
-	color: var(--tekstfarge);
-	background-color: var(--farge);
-	&:hover {
-		filter: brightness(80%);
-		opacity: 1;
-		background-color: var(--hoverfarge);
-	}
+    color: var(--tekstfarge);
+    background-color: var(--farge);
+    &:hover {
+        filter: brightness(80%);
+        opacity: 1;
+        background-color: var(--hoverfarge);
+    }
 
-	& > span {
-		font-weight: var(--a-font-weight-regular);
-	}
+    & > span {
+        font-weight: var(--a-font-weight-regular);
+    }
 }
 
 .virksomhetOgSamarbeidsHeader {
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
-	background-color: var(--a-surface-default);
-	padding: 2rem;
-	box-shadow: var(--a-shadow-small);
-	z-index: 1;
+    background-color: var(--a-surface-default);
+    padding: 2rem;
+    box-shadow: var(--a-shadow-small);
+    z-index: 1;
 
-	.salesforceLenke {
-		font-size: 1.125rem;
-	}
+    .salesforceLenke {
+        font-size: 1.125rem;
+    }
 
-	
-	.invisibleButton {
-		background-color: transparent;
-		border: none;
-		padding: 0;
+    .invisibleButton {
+        background-color: transparent;
+        border: none;
+        padding: 0;
 
-		.virksomhetsInfoIkon {
-			display: flex;
-			cursor: pointer;
-		}
-	}
+        .virksomhetsInfoIkon {
+            display: flex;
+            cursor: pointer;
+        }
+    }
+
+    .tabButton {
+        // Override default styles fra tab
+        --a-font-weight-bold: 400;
+        --a-font-size-medium: 1.125rem;
+        --a-spacing-1: 0.5rem;
+    }
 }
 
 .arkivertSakAlert {
@@ -70,21 +76,21 @@
     row-gap: 0.5rem;
     column-gap: 1.5rem;
 
-	.infoTittel {
-		font-weight: bold;
-		grid-column-start: 0;
-		grid-column-end: 1;
-	}
-	.infoData {
-		grid-column-start: 1;
-		max-width: 26rem;
-	}
-	.tittelMedHelpTextContainer {
-		font-weight: bold;
-		grid-column-start: 0;
-		grid-column-end: 1;
-		display: flex;
-		align-items: center;
-		gap: 0.5rem;
-	}
+    .infoTittel {
+        font-weight: bold;
+        grid-column-start: 0;
+        grid-column-end: 1;
+    }
+    .infoData {
+        grid-column-start: 1;
+        max-width: 26rem;
+    }
+    .tittelMedHelpTextContainer {
+        font-weight: bold;
+        grid-column-start: 0;
+        grid-column-end: 1;
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+    }
 }
