--- a/client/src/Pages/Virksomhet/Samarbeidsvelger/samarbeidsvelger.module.scss
+++ b/client/src/Pages/Virksomhet/Samarbeidsvelger/samarbeidsvelger.module.scss
@@ -1,91 +1,104 @@
 @mixin radStyling {
-	padding: 0.5rem 1rem;
+    padding: 0.75rem 1rem;
+    word-break: break-all;
 
-	&:not(:last-child) {
-		border-bottom: 1px solid var(--a-gray-300);
-	}
+    &:not(:last-child) {
+        border-bottom: 1px solid var(--a-gray-300);
+    }
 }
 
 .samarbeidsvelger {
-	display: flex;
-	flex-direction: column;
-	align-items: stretch;
-	justify-content: flex-start;
-	background-color: var(--a-surface-default);
-	margin-left: 1rem;
-	margin-right: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: flex-start;
+    background-color: var(--a-surface-default);
+    margin-left: 1rem;
+    margin-right: 1rem;
 
-	.radCommon {
-		@include radStyling;
-		display: block;
-		color: var(--a-text-default);
+    .radCommon {
+        @include radStyling;
+        display: block;
+        color: var(--a-text-default);
 
-		
-		&.klikkbar {
-			font-weight: var(--a-font-weight-regular);
-			--a-font-weight-bold: var(--a-font-weight-regular);
-			border-radius: 0;
+        &.klikkbar {
+            font-weight: var(--a-font-weight-regular);
+            --a-font-weight-bold: var(--a-font-weight-regular);
+            border-radius: 0;
 
-			&:hover {
-				background-color: var(--a-blue-50);
-				text-decoration: underline;
-				color: var(--a-text-default);
-			}
-		}
+            &:hover {
+                background-color: var(--a-blue-50);
+                text-decoration: underline;
+                color: var(--a-text-default);
+            }
+        }
 
-		&.valgtSamarbeid {
-			background-color: var(--a-blue-100);
-			text-decoration: underline;
-			color: var(--a-blue-800);
-		}
+        &.valgtSamarbeid {
+            background-color: var(--a-blue-100);
+            text-decoration: underline;
+            color: var(--a-blue-800);
+        }
 
-		&.overskriftRad {
-			display: flex;
-			height: 4rem
-		}
-	}
-	
-	.liste {
-		list-style: none;
-		margin: 0;
-		padding: 0;
-		
-		&:not(:last-child) .radCommon {
-			&:last-child {
-				border-bottom: 1px solid var(--a-gray-300);
-			}
-		}
+        &.overskriftRad {
+            display: flex;
+            height: 4rem;
+            padding-right: 0;
+        }
+    }
 
-		.avsluttetSamarbeid {
-			:global(.navds-label) {
-				display: flex;
-				align-items: baseline;
-				justify-content: space-between;
-			}
-		}
-	}
+    .liste {
+        list-style: none;
+        margin: 0;
+        padding: 0;
 
-	.overskrift {
-		margin: 0;
-	}
+        &:not(:last-child) .radCommon {
+            &:last-child {
+                border-bottom: 1px solid var(--a-gray-300);
+            }
+        }
 
-	.inaktiveSamarbeidReadMore {
-		:global(.navds-read-more__button) {
-			@include radStyling;
-			width: 100%;
-		}
-		:global(.navds-read-more__content) {
-			border: 0;
-			padding: 0;
-			margin: 0;
-		}
+        .avsluttetSamarbeid {
+            display: flex;
+            align-items: baseline;
+            justify-content: space-between;
+            flex-wrap: wrap;
 
-		&:last-child {
-			:global(.navds-read-more__button) {
-				&[data-state="closed"] {
-					border-bottom: none;
-				}
-			}
-		}
-	}
+            .avsluttetSamarbeidStatus {
+                margin-left: auto;
+            }
+            &.klikkbar {
+                &:hover {
+                    background-color: var(--a-gray-50);
+                }
+            }
+            &.valgtSamarbeid {
+                background-color: var(--a-gray-100);
+            }
+        }
+    }
+
+    .overskrift {
+        margin: 0;
+    }
+
+    .inaktiveSamarbeidReadMore {
+        :global(.navds-read-more__button) {
+            @include radStyling;
+            width: 100%;
+            padding-left: 0;
+        }
+        :global(.navds-read-more__content) {
+            border: 0;
+            padding: 0;
+            margin: 0;
+        }
+
+        &:last-child {
+            :global(.navds-read-more__button) {
+                &[data-state="closed"] {
+                    border-bottom: none;
+                }
+            }
+        }
+    }
 }
