Fjerner understrek på uvalgte samarbeid i velgeren.

--- a/client/src/Pages/Virksomhet/Samarbeidsvelger/samarbeidsvelger.module.scss
+++ b/client/src/Pages/Virksomhet/Samarbeidsvelger/samarbeidsvelger.module.scss
@@ -25,6 +25,7 @@
             font-weight: var(--a-font-weight-regular);
             --a-font-weight-bold: var(--a-font-weight-regular);
             border-radius: 0;
+            text-decoration: none;
 
             &:hover {
                 background-color: var(--a-blue-50);
