--- a/client/src/Pages/Virksomhet/Samarbeidsvelger/samarbeidsvelger.module.scss
+++ b/client/src/Pages/Virksomhet/Samarbeidsvelger/samarbeidsvelger.module.scss
@@ -1,6 +1,6 @@
 @mixin radStyling {
     padding: 0.75rem 1rem;
-    word-break: break-all;
+    word-break: break-word;
 
     &:not(:last-child) {
         border-bottom: 1px solid var(--a-gray-300);
