--- a/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
+++ b/client/src/Pages/Virksomhet/Virksomhetsoversikt/VirksomhetsinfoHeader/virksomhetsinfoheader.module.scss
@@ -62,6 +62,11 @@
     }
 }
 
+.duErPåGammelPeriodeBanner {
+    background-color: var(--a-gray-300);
+    padding: 1rem 1.5rem;
+}
+
 .arkivertSakAlert {
     margin-bottom: 2rem;
 
