La til tabellvisning som mulighet på visning av kartleggingsresultater.

--- a/client/src/components/Spørreundersøkelse/spørreundersøkelse.module.scss
+++ b/client/src/components/Spørreundersøkelse/spørreundersøkelse.module.scss
@@ -23,7 +23,16 @@
             margin-left: 10px;
             margin-bottom: 0.5rem;
         }
+
+        .tekstvisning {
+            padding-left: 0.75rem;
+            padding-right: 0.75rem;
+        }
     }
+}
+.grafTabellBryter {
+    margin-left: auto;
+    margin-right: 1rem;
 }
 
 .antallDeltakere {
