Fikser et par steder med svake kontraster

--- a/client/src/Pages/Virksomhet/virksomhetsvisning.module.scss
+++ b/client/src/Pages/Virksomhet/virksomhetsvisning.module.scss
@@ -35,6 +35,10 @@
                     font-weight: var(--a-font-weight-bold);
                 }
 
+                .salesforcelenke {
+                    color: var(--a-blue-700);
+                }
+
                 &.aktiv {
                     background-color: var(--a-blue-100);
                     .tittel {
