--- a/client/src/components/Footer/footer.module.scss
+++ b/client/src/components/Footer/footer.module.scss
@@ -9,6 +9,7 @@
     font-size: 1rem;
 
     .sykefraværsstatistikkknapp {
+        color: var(--a-blue-700);
         --a-font-weight-bold: 400;
         --ac-button-tertiary-hover-bg: var(--a-surface-action-active);
         --ac-button-tertiary-hover-text: var(--a-surface-default);
@@ -22,5 +23,9 @@
         .popoverContentMedMaxWidth {
             max-width: 30rem;
         }
+    }
+
+    .footerlenke {
+        color: var(--a-blue-700);
     }
 }
