--- a/client/src/Pages/Virksomhet/virksomhetsvisning.module.scss
+++ b/client/src/Pages/Virksomhet/virksomhetsvisning.module.scss
@@ -36,7 +36,7 @@
                 }
 
                 .salesforcelenke {
-                    color: var(--a-blue-700);
+                    --a-text-action: var(--a-blue-700);
                 }
 
                 &.aktiv {
